alignement fix

--- a/start.css
+++ b/start.css
@@ -444,8 +444,9 @@ body {
     font-weight: 700;
     margin-bottom: 20px;
     margin-top: 70px;
-    margin-right: 35%;
+    padding-left: 20px; 
     color: white;
+    text-align: left; 
 }
 
 .input-container {
